@@ -2,6 +2,10 @@ GNU sed NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  'sed --follow-symlinks -i' no longer mishandles an operand that is a
+  short symbolic link to a long symbolic link to a file.
+  [bug introduced in sed 4.9]
+
 
 * Noteworthy changes in release 4.9 (2022-11-06) [stable]
 
